# firestone

./: .gitignore  .pycodestyle  CLAUDE.md  GEMINI.md  Makefile  README.md  output.md  package-lock.json  pyproject.toml  pytest-coverage.txt
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/workflows/: :w  build.yml  docs.yaml  pr.yml  publish.yml  pylint.yml  update-coverage-on-readme.yml
docs/site/: config.toml  lychee.toml
docs/site/content/: _index.md  changelog.md  glossary.md  license.md
docs/site/content/advanced-topics/: _index.md  api-design-principles.md  authentication-patterns.md  clear-consistent-naming.md  custom-templates.md  docker-integration.md  generating-client-server-code.md  json-schema-validation.md  multi-resource-apis.md  openapi-ecosystem-integration.md  pagination-and-filtering-beyond-basics.md  schema-design.md  schema-first-philosophy.md  schema-references-and-reuse.md  security-best-practices.md  security-schemes.md  swagger-ui-server.md  troubleshooting-generation-failures.md  understanding-openapi-spec.md  versioning-strategies.md
docs/site/content/api-reference/: _index.md
docs/site/content/core-concepts/: _index.md  anatomy.md  resource-types.md
docs/site/content/examples/: _index.md  addressbook.md  blog-api.md  multi-resource-api.md  simple-crud.md
docs/site/content/generation-guides/: _index.md
docs/site/content/getting-started/: _index.md  architecture.md  components.md  installation.md  outputs.md  quickstart.md  what-is-firestone.md  why-resource-first.md
docs/site/content/introduction/: _index.md
docs/site/content/reference/: _index.md  cli-command-reference.md  common-patterns-cheat-sheet.md  error-messages-guide.md  firestone-vs-alternatives.md  overview.md  python-docstrings.md  python-pdoc-generation.md  resource-schema-quick-reference.md  rust-api-references.md
docs/site/public/css/: main.css
docs/site/public/js/: theme-toggle.js
docs/site/scripts/: add_frontmatter.sh  fix_anchors.py  test-docs.sh
docs/site/static/: width-test.html
docs/site/static/js/: navigation.js
docs/site/templates/: base.html  index.html  section.html
docs/site/templates/partials/: footer.html  head.html  navbar.html  sidebar.html  toc.html
examples/: addressbook.yaml  person.yaml
examples/addressbook/: addressbook.yaml  asyncapi.yaml  main.py  main_mods.py  openapi-gen-config.json  openapi-gen-server-config.json  openapi.yaml  person-openapi.yaml  person.yaml  postal_codes.yaml  resource.json  resource.yaml
examples/addressbook/addressbook/: main.py  security_api.py
examples/addressbook/addressbook/apis/: addressbook_api.py  addressbook_api_base.py  persons_api.py  persons_api_base.py  postal_codes_api.py  postal_codes_api_base.py
examples/addressbook/addressbook/cli/: addressbook.py  persons.py  postal_codes.py
examples/addressbook/addressbook/client/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
examples/addressbook/addressbook/impl/: addressbook.py
examples/addressbook/addressbook/models/: addressbook.py  addressbook_address_key_person_uuid_put_request_inner.py  addressbook_address_key_put_request_inner.py  create_addressbook.py  create_person.py  create_postal_code.py  person.py  persons.py  postal_code.py  update_addressbook.py  update_person.py  update_postal_code.py
examples/addressbook/addressbook/webui/: app.py  (+4 more)
examples/addressbook_rs/: Cargo.toml  README.md  openapi-gen-config.json  openapi-gen-server-config.json  openapi.json  openapi.yaml  openapi_3.0.3.json  openapi_3.0.3.yaml
examples/addressbook_rs/src/: main.rs
firestone/: __main__.py  resource.py
firestone/schema/: asyncapi.jinja2  cli_module.py.jinja2  cli_module.rs.jinja2  main.py.jinja2  main.rs.jinja2  openapi.jinja2  resource.yaml  streamlit.py.jinja2  streamlit_page.py.jinja2  streamlit_pages.py.jinja2
firestone/spec/: __init__.py  _base.py  asyncapi.py  cli.py  cli_rust.py  openapi.py  streamlit.py
test/spec/: test_base.py  test_cli_rust.py  test_openapi.py
(+90 files in other folders)
